# lisas_little_package

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/lisas_little_package/: __init__.py
tests/: test_lisas_little_package.py
