[tool.poetry]
name = "lisas_little_package"
version = "0.1.0"
description = "A package that can help you find a concert based on an artist and a city"
authors = ["Lisa Carle"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
